# descartes_demo

./: README.md  README~  setup.sh
draw/: CMakeLists.txt  package.xml  package.xml~
draw/config/: config.rviz
draw/include/: draw.h
draw/launch/: demo_key_ctrl.launch  demo_run.launch  demo_setup.launch  demo_setup.launch~  test.launch  test.launch~
draw/src/: draw.cpp  draw.cpp~  getKey.cpp  keyctrl.cpp  main.cpp  testMoveit.cpp  tutorial1.cpp  tutorial1.cpp~
draw_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
draw_moveit_config/config/: draw_robot.srdf  kinematics.yaml  kinematics.yaml~
draw_moveit_config/launch/: default_warehouse_db.launch  demo.launch  draw_robot_moveit_controller_manager.launch.xml  draw_robot_moveit_controller_manager.launch.xml~  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch~  moveit_planning_execution.launch  moveit_planning_execution.launch~  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
draw_support/: CMakeLists.txt  draw.rviz  package.xml
draw_support/launch/: visualize.launch  visualize.launch~
draw_support/urdf/: draw_robot.xacro  draw_robot.xacro~  ur5_demo_robot.xacro~
